<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="247dp"
        android:layout_height="325dp"
        android:src="@drawable/fries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/fries" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="20dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:text="@string/some_fries_i_got_many_years_ago"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bb"
        android:layout_width="109dp"
        android:layout_height="139dp"
        android:layout_marginEnd="31dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="187dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/abt"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="381dp"
        android:layout_height="129dp"
        android:layout_marginBottom="36dp"
        android:scrollbars="vertical"
        android:text="@string/para1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.681" />

</androidx.constraintlayout.widget.ConstraintLayout>